# gativideo

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
config/: config.go
example/: config.toml
model/: initial.go  model.go
opensubs/: opensubs.go  opensubs_test.go
src/: app.rs  main.rs
src/config/: config_toml.rs
src/downloads/: transmission.rs
src/elements/: focus.rs  input.rs  mod.rs  movie_table.rs  popup.rs
torr/: downloader.go  torrent.go
yts/: yts.go  yts_test.go
