[package]
name = "gativideo"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
itertools = "0.14.0"
ratatui = { version = "0.30.0-alpha.5", features = ["all-widgets"] }
tokio = { version = "1.45.1", features = ["full"] }
transmission-rpc = "0.5.0"
unicode-width = "0.2.0"
yts-movies = "0.1.2"
