[package]
name = "gativideo"
version = "0.1.0"
edition = "2024"
description = "TUI app to download YTS movies and opensubtitles subtitles"
authors = ["Javier Orfo <javierorfo@protonmail.com>"]
license = "MIT"
repository = "https://github.com/javiorfo/gativideo"
homepage = "https://github.com/javiorfo/gativideo#readme"
keywords = ["movies", "subtitles", "tui", "torrent", "transmission"]
rust-version = "1.88"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json"] }
ratatui = { version = "0.30.0-alpha.5", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
transmission-rpc = "0.5.0"
anyhow = "1.0.99"
toml = "0.9.5"
zip = "0.6"
opensubs = "0.1.3"
yts-movies = "0.2.0"
